# logl

./: .gitignore  CMakeLists.txt  README.md  buildandrun.sh
headers/: Shader.h  Texture.h  utils.h
include/: glad.h
shaders/: shader.frag  shader.vert
src/: Shader.cpp  Texture.cpp  glad.c  main.cpp
